# llm-experiments

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  agents.py  dev.md  docker-compose.yml  lab.ipynb  main.py  nodes.py  pyproject.toml  rebuild.db  todo.md  utils.py
.github/workflows/: static.yml
examples/: swe.py
llm_experiments/: agent_w_browser.py  agent_w_tools.py  browser.py  chat.py  chat_models.py  embedding.py  models.py  rabbit.py  tools.py  utils.py  vectorstore.py  vision.py
notebooks/: agent-2.ipynb  agents.ipynb  aggregateion.ipynb  conditional_edges.ipynb  evalutior_optimizer.ipynb  experiment.ipynb  experiments.ipynb  orchestration.ipynb  playground.ipynb  tool_calls.ipynb
output/swe/: index.html
src/llm_experiments/: __init__.py  __main__.py  agent.py  agents.py  cli.py  client.py  clients.py  graphs.py  llm.py  main.py  nodes.py  playground.ipynb  prebuilt.py  prompts.py  server.py  slack_tools.py  tools.py  utils.py
src/llm_experiments/agents/: python_w_natural_lang.py  researcher.py  search.py  serper.py  shell.py  utils.py  wikipedia.py
src/llm_experiments/custom_tools/: slack.py
src/llm_experiments/graphs/: interactive_browser.py  python_with_natural_langurage.py  search.py  shell.py  simple_chatbot.py  utils.py
src/llm_experiments/mcp/: serve.py  server.py
src/llm_experiments/multiagents/: swe.py
tests/: test_agent.py  test_chat.py  test_embedding.py  test_llm.py  test_models.py  test_prebuilt.py  test_rabbit.py  test_server.py  test_slack_tools.py  test_tools.py  test_vectorstore.py  test_vision.py
