[project]
name = "langchain-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "isort>=6.0.0",
    "jupyterlab>=4.3.5",
    "langchain>=0.3.18",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.17",
    "langchain-experimental>=0.3.4",
    "langchain-ollama>=0.2.3",
    "langchain-openai>=0.3.5",
    "langgraph>=0.2.72",
    "pillow>=11.1.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "tavily-python>=0.5.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipython>=8.32.0",
    "isort>=6.0.0",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
]

[tool.ruff]
line-length = 127
