[project]
name = "llm-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.5",
    "lxml>=5.3.1",
    "playwright>=1.50.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.10",
]
